--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,13 @@ development:
   database: hms
   timeout: 5000
 
+exception_database:
+  adapter: postgresql
+  encoding: utf8
+  host: localhost
+  database: hms
+  timeout: 5000
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
