--- a/config/database.yml
+++ b/config/database.yml
@@ -9,21 +9,21 @@ default: &default
   adapter: postgresql
   encoding: utf8
   host: localhost
-  database: hms
+  database: hostel
   timeout: 5000
 
 development:
   adapter: postgresql
   encoding: utf8
   host: localhost
-  database: hms
+  database: hostel
   timeout: 5000
 
 exception_database:
   adapter: postgresql
   encoding: utf8
   host: localhost
-  database: hms
+  database: hostel
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
@@ -31,11 +31,11 @@ exception_database:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hms
+  database: hostel
 
 production:
   <<: *default
-  database: hms
+  database: hostel
 
 
 
